@@ -1,3 +1,12 @@
+2004-05-27  Todd Berman  <tberman@sevenl.net>
+
+	* Internal/Project/Project/AbstractProject.cs: Properly ignore
+	.svn and CVS directories.
+	* Gui/Pads/ClassScout/ClassScout.cs: Properly work around potential
+	exceptions until we figure out why they are happening.
+	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: start
+	the add file dialog in the proper place.
+
 2004-05-26  Todd Berman  <tberman@sevenl.net>
 
 	* Internal/Project/Combine/Combine.cs: fix nullref when you dont
